deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanshain
  labels:
    app: sanshain
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sanshain
  type: ClusterIP
